--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tinymce/tinymce-react": "^4.3.2",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^3.0.1",
+    "next": "14.0.4",
     "react": "^18",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^8",
