--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tinymce/tinymce-react": "^4.3.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.0.1",
+    "link-react": "^3.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-datepicker": "^4.25.0",
